--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 779841249082.dkr.ecr.us-east-1.amazonaws.com
     - name: Build and push Docker image to ECR
       run: |
-          docker build -f Services/Login/Login.API/Dockerfile -t test:latest .
+          docker build -f BuildrOpsBE-main/Services/Login/Login.API/Dockerfile -t test:latest .
           docker tag test:latest 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
           docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
