--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
          echo ${{ secrets.AWS_ACCESS_KEY_ID }}
          echo "as"
-         docker build -f Services/Login/Login.API/Dockerfile .
+         docker build -t test .
          docker tag test:latest 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
          docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
