--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 779841249082.dkr.ecr.us-east-1.amazonaws.com
     - name: Build and push Docker image to ECR
       run: |
-         docker build  ECR-Test/BuildrOpsBE-main/Services/Login/Login.API/Dockerfile .
+         docker build /Services/Login/Login.API/Dockerfile .
          docker tag test:latest 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
          docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/test:latest
          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
