--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 779841249082.dkr.ecr.us-east-1.amazonaws.com
     - name: Build and push Docker image to ECR
       run: |
-         docker buildx build --platform linux/amd64 -t my-image:latest /path/to/build/context
+         docker buildx build --platform linux/amd64 -t my-image:latest /path/to/build/context .
          docker build -t githubrunner /Services/Login/Login.API .
          docker tag githubrunner:latest 779841249082.dkr.ecr.us-east-1.amazonaws.com/githubrunner:latest
          docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/githubrunner:latest
