--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
-name: Build and Push Golang Image to AWS ECR
-on:
-  push:
-    branches: [ master ]
-jobs:
-  build-and-push:
-    name: Build and Push to ECR
+
+ name: Deploy to Amazon ECR
+
+  jobs:
+  create-golden-dotnet:
+    name: Create Golden Dotnet Image
     runs-on: self-hosted
+    environment: production
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -15,7 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: us-east-2
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -24,14 +25,10 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: my-repo
+        IMAGE_TAG: latest
       id: build-image
       run: |
-         #ls
-         # Build a docker container and
-         # push it to ECR
-         echo ${{ secrets.AWS_ACCESS_KEY_ID }}
-         echo "as"
-         docker buildx -f Services/Login/Login.API/Dockerfile -t latest .
-         docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/githubrunner:latest
-         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
+        docker build -f Services/Login/Login.API/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
