--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@
         IMAGE_TAG: latest
       id: build-image
       run: |
-        docker build -t githubrunner:latest /Services/Login/Login.API
+        docker build -t githubrunner:latest /Services/Login/Login.API/Dockerfile .
         docker tag githubrunner:latest 779841249082.dkr.ecr.us-east-1.amazonaws.com/githubrunner:latest
         docker push 779841249082.dkr.ecr.us-east-1.amazonaws.com/githubrunner:latest
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
